Personal portfolio to demonstrate skills

--- a/index.html
+++ b/index.html
@@ -3,37 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./stylesheet.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Heebo:wght@500;700&family=Lobster&display=swap"
       rel="stylesheet"
     />
-    <title>Slide Animation</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+
+    <title>My Portfolio</title>
   </head>
   <body>
     <main>
       <section class="landing">
         <nav>
-          <h1 id="logo">Afloat</h1>
+          <h1 id="logo">Portfolio</h1>
           <ul class="nav-links">
-            <li>Home</li>
-            <li>Contact</li>
-            <li>About</li>
+            <li><a href='#'>Home</a></li>
+            <li><a href='#'>Contact</a></li>
+            <li><a href='#'>About</a></li>
           </ul>
         </nav>
-        <h2 class="big-text">Stay Afloat</h2>
+        <h2 class="big-text">Keep Going</h2>
       </section>
     </main>
     <div class="intro">
       <div class="intro-text">
         <h1 class="hide">
-          <span class="text">Creating inovation</span>
+          <span class="text">Hey,</span>
         </h1>
         <h1 class="hide">
-          <span class="text">For Everyday</span>
+          <span class="text">Welcome to</span>
         </h1>
         <h1 class="hide">
-          <span class="text">people.</span>
+          <span class="text">My portfolio.</span>
         </h1>
       </div>
     </div>
